<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.inicioSesion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:src="@drawable/logohealthypoint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/IniSesion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/IniciarSesion"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/black"
                            android:textSize="36sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="0dp"
                            android:layout_height="34dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/correo"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/IniSesion"
                      />

                        <EditText
                            android:id="@+id/idMailUser"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:ems="10"
                            android:hint="Correo Electronico"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/username"
                            app:layout_constraintTop_toBottomOf="@+id/username" />

                        <TextView
                            android:id="@+id/userPassword"
                            android:layout_width="0dp"
                            android:layout_height="39dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/userPassword"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/idMailUser"
                            app:layout_constraintTop_toBottomOf="@+id/idMailUser" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Contraseña"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/userPassword"
                            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/password"
                            app:layout_constraintTop_toBottomOf="@+id/password">

                            <android.widget.Button
                                android:id="@+id/login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/botones"
                                android:text="@string/IniciarSesion" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="10dp"
                                android:layout_weight="1" />

                            <android.widget.Button
                                android:id="@+id/btnRegistro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/botones"
                                android:text="@string/Registro" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/loading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="64dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="64dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/password"
                            app:layout_constraintStart_toStartOf="@+id/password"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="43dp" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>